# todo

./: .gitignore  Cargo.toml  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cargo/: config.toml
apps/desktop/: package.json
apps/desktop/src/: App.tsx
apps/server/: Cargo.toml
apps/server/src/: main.rs  utils.rs
apps/web/: index.html  package.json
apps/web/src/: App.tsx
core/: Cargo.toml
core/prisma/: schema.prisma
core/src/: lib.rs
core/src/api/: mod.rs
interface/: ErrorPage.tsx  index.tsx  package.json  tsconfig.json
interface/app/: index.css  index.tsx
interface/app/Layout/: index.module.css  index.tsx
interface/app/Layout/Header/: index.module.css  index.tsx
interface/app/Layout/Sidebar/: index.module.css  index.tsx
interface/app/components/DarkSpace/: index.tsx
interface/app/components/SidebarLink/: index.tsx
interface/app/components/Switch/: index.css  index.tsx
