[workspace]
resolver = "2"
members = [
	"apps/server",
    "core",
    "crates/prisma-cli"
]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust",  features = [
	"migrations",
	"sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", features = [
	"migrations",
	"sqlite",
], default-features = false }
tokio = { version = "1.28.2", features = ["full"] }
