[package]
name = "td-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust =  { workspace = true }
prisma-client-rust-cli =  { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.18"